set up router and tailwind styles

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,12 @@
 @tailwind base;
+
+@layer base {
+  html {
+    @apply text-grey;
+    @apply text-[16px];
+  }
+}
+
 @tailwind utilities;
 @tailwind components;
 
